     * The way to create Lua candidate actions has changed a little. Old code
       will require minor changes.
     * New wesnoth.micro_ais table contains the loaders for all Micro AIs.
       New loaders can easily be installed by add-ons. See any built-in
       micro AI (in ai/micro_ais/mai-defs/) for an example of how to do this.
 * Wesnoth formula engine:
   * Formulas in unit filters can now access nearly all unit attributes
   * New syntax features:
     * String interpolation syntax. Within a formula string (enclosed in
       'single quotes'), the syntax [some_formula] interpolates the result
       of the inner formula into the string. (The simplest use case is
       interpolating the values of variables.)
     * String can now escape special characters:
       ['] single quote, [(] open square bracket, [)] close square bracket
     * New 'in' operator which tests if a list contains an item or if a map
       contains a key.
     * New concatenation operator a..b which works on strings and lists
     * New range operator a~b which produces a list of consecutive integers
       This can also be used for "list slicing" - eg my_list[3~5] returns
       a new list containing elements 3 through 5 of my_list.
     * Lists can be used as an index for a list. This is "selection indexing"
       and returns a new list with only the elements specified by the indexing
       list.
     * Function definitions (using the def keyword) are now supported in all
       formula contexts, which means that they can be used outside FormulaAI.
       However, non-FormulaAI functions are currently local to the formula
       that declares them.
     * Maps containing string keys that are valid identifiers can now be
       indexed with the dot operator instead of the indexing operator.
     * Strings can now be indexed via 'string'.char[n]. Also supported are
       'string'.word[n] and 'string'.item[n] (the latter splits on commas)
   * Changes to core functions: