@@ -21,6 +21,7 @@
 #define AI_TESTING_ASPECT_ATTACKS_HPP_INCLUDED
 
 #include "ai/composite/aspect.hpp"
+#include "units/filter.hpp"
 
 #ifdef _MSC_VER
 #pragma warning(push)
@@ -33,18 +34,19 @@ namespace ai {
 
 namespace ai_default_rca {
 
-class aspect_attacks: public typesafe_aspect<attacks_vector> {
+class aspect_attacks_base : public typesafe_aspect<attacks_vector> {
 public:
-	aspect_attacks(readonly_context &context, const config &cfg, const std::string &id);
+	aspect_attacks_base(readonly_context &context, const config &cfg, const std::string &id);
 
 
-	virtual ~aspect_attacks();
+	virtual ~aspect_attacks_base() {}
 
 
 	virtual void recalculate() const;
 
 
-	virtual config to_config() const;
+	virtual bool is_allowed_attacker(const unit& u) const = 0;
+	virtual bool is_allowed_enemy(const unit& u) const = 0;
 
 
 protected:
@@ -60,13 +62,43 @@ protected:
 			attack_analysis& cur_analysis,
 			 const team &current_team) const;
 	static int rate_terrain(const unit& u, const map_location& loc);
-	config filter_own_;
-	config filter_enemy_;
 };
 
+class aspect_attacks : public aspect_attacks_base {
+public:
+	aspect_attacks(readonly_context &context, const config &cfg, const std::string &id);
+	virtual ~aspect_attacks() {}
 
+	virtual bool is_allowed_attacker(const unit& u) const;
+	virtual bool is_allowed_enemy(const unit& u) const;
+	virtual config to_config() const;
+private:
+	boost::shared_ptr<unit_filter> filter_own_, filter_enemy_;
+};
 
 } // end of namespace testing_ai_default
+
+struct aspect_attacks_lua_filter {
+	lua_State* lua;
+	boost::shared_ptr<unit_filter> filter_own_, filter_enemy_;
+	int ref_own_, ref_enemy_;
+};
+
+class aspect_attacks_lua : public ai_default_rca::aspect_attacks_base {
+public:
+	aspect_attacks_lua(readonly_context &context, const config &cfg, const std::string &id, boost::shared_ptr<lua_ai_context>& l_ctx);
+	virtual ~aspect_attacks_lua() {}
+
+	virtual bool is_allowed_attacker(const unit& u) const;
+	virtual bool is_allowed_enemy(const unit& u) const;
+	virtual config to_config() const;
+	virtual void recalculate() const;
+private:
+	boost::shared_ptr<lua_ai_action_handler> handler_;
+	mutable boost::shared_ptr<lua_object<aspect_attacks_lua_filter> > obj_;
+	std::string code_;
+	const config params_;
+};
 
 } // end of namespace ai
 
