@@ -18,13 +18,58 @@
  */
 
 
-#include "lua_object.hpp"
+#include "ai/lua/lua_object.hpp"
+#include "ai/lua/engine_lua.hpp"
+#include "ai/default/aspect_attacks.hpp"
+#include "scripting/lua_types.hpp"
+#include "scripting/lua_common.hpp"
+#include "resources.hpp"
+
+#include <boost/smart_ptr/make_shared_object.hpp>
+#include "lauxlib.h"
 
 namespace ai {
 
 	lua_object_base::lua_object_base()
 	{
 		// empty
+	}
+	
+	template <>
+	boost::shared_ptr<aspect_attacks_lua_filter> lua_object<aspect_attacks_lua_filter>::to_type(lua_State *L, int n)
+	{
+		boost::shared_ptr<aspect_attacks_lua_filter> att(new aspect_attacks_lua_filter);
+		att->lua = NULL;
+		att->ref_own_ = att->ref_enemy_ = -1;
+		if(!lua_istable(L, n)) {
+			return att;
+		}
+		lua_getfield(L, n, "own");
+		if(lua_istable(L, -1)) {
+			config cfg;
+			vconfig vcfg(cfg, true);
+			if(luaW_tovconfig(L, -1, vcfg)) {
+				att->filter_own_.reset(new unit_filter(vcfg, resources::filter_con));
+			}
+		} else if(lua_isfunction(L, -1)) {
+			att->lua = L;
+			att->ref_own_ = luaL_ref(L, LUA_REGISTRYINDEX);
+			assert(att->ref_own_ != -1);
+		}
+		lua_getfield(L, n, "enemy");
+		if(lua_istable(L, -1)) {
+			config cfg;
+			vconfig vcfg(cfg, true);
+			if(luaW_tovconfig(L, -1, vcfg)) {
+				att->filter_enemy_.reset(new unit_filter(vcfg, resources::filter_con));
+			}
+		} else if(lua_isfunction(L, -1)) {
+			att->lua = L;
+			att->ref_enemy_ = luaL_ref(L, LUA_REGISTRYINDEX);
+			assert(att->ref_enemy_ != -1);
+		}
+		lua_pop(L, 2);
+		return att;
 	}
 
 } //end of namespace ai
